<resources>
    <string name="app_name">Diet Companion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="delete_title">Confirm</string>
    <string name="diet_list_title">Diets</string>
    <string name="recommended_list_title">Recommended</string>
    <string name="hello">Hello</string>
    <string name="there">There ,</string>
    <string name="field_error">Field cannot be blank</string>
    <string name="rateeffilike">Rate Effectiveness / Likeliness</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="tick_for_similar_recommendation">Tick for Similar Recommendation</string>
    <string name="diet_name">Diet Name :</string>
    <string name="diet_type">Diet Type :</string>
    <string name="tick_to_add">Tick to Add</string>
    <string name="please">Please</string>
    <string name="authenticate">Authenticate ,</string>
    <string name="you_will_be">You will be</string>
    <string name="redirected">Redirected</string>
    <string name="kindly">. Kindly</string>
    <string name="be">be</string>
    <string name="patient">Patient</string>
    <string name="until_the_process">until the process</string>
    <string name="completes">completes.</string>
    <string name="sign_in_sign_up">Sign In / Sign Up</string>
    <string name="diet_details">Diet Details</string>
    <string name="name_of_the_diet">Name of the Diet :</string>
    <string name="nothing">-</string>
    <string name="aim_of_the_diet">Aim of the Diet :</string>
    <string name="claim_of_the_diet">Claim of the Diet :</string>
    <string name="description_of_the_diet">Description Of the Diet :</string>
    <string name="diet">Diet</string>
    <string name="capture_image">Capture Image</string>
    <string name="gallery">Gallery</string>
    <string name="nutrition">Nutrition</string>
    <string name="support">Support</string>
    <string name="history">History</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="submit">Submit</string>
    <string name="history_details">History Details</string>
    <string name="nutrition_details">Nutrition Details</string>
    <string name="name_of_the_product_consumed">Name of the Product Consumed :</string>
    <string name="description_of_the_product">Description of the Product :</string>
    <string name="alpha_carotene">Alpha Carotene :</string>
    <string name="beta_carotene">Beta Carotene :</string>
    <string name="beta_cryptoxanthin">Beta Cryptoxanthin :</string>
    <string name="carbohydrate">Carbohydrate :</string>
    <string name="cholestrol">Cholestrol :</string>
    <string name="choline">Choline :</string>
    <string name="fiber">Fiber :</string>
    <string name="protein">Protein :</string>
    <string name="sugar">Sugar :</string>
    <string name="water">Water :</string>
    <string name="saturated_fat">Saturated Fat :</string>
    <string name="copper">Copper :</string>
    <string name="iron">Iron :</string>
    <string name="vitamin_c">Vitamin C :</string>
    <string name="vitamin_e">Vitamin E :</string>
    <string name="vitamin_k">Vitamin K :</string>
    <string name="vitamin_b6">Vitamin B6 :</string>
    <string name="vitamin_b12">Vitamin B12 :</string>
    <string name="authenticate_to_continue">Authenticate To Continue</string>
    <string name="show_your_support">Show Your Support</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="enter_your_weight">Enter Your Weight</string>
    <string name="select_rating">Select Rating :</string>
    <string name="select_diet">Select Diet :</string>
    <string name="name_of_the_product">Name of the Product :</string>
    <string name="time">Time :</string>
</resources>
