<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/authentication"
    tools:context=".presentation.authentication.AuthenticationFragment">


    <TextView
        android:id="@+id/please"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_marginBottom="@dimen/one_fifty_dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/please"
        android:textColor="@color/deep_orange"
        android:textSize="@dimen/thirty_sp"
        app:layout_constraintBottom_toTopOf="@id/authenticate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/authenticate_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/five_dp"
        android:layout_marginBottom="@dimen/one_fifty_dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/authenticate"
        android:textColor="@color/deep_orange"
        android:textSize="@dimen/thirty_five_sp"
        app:layout_constraintBottom_toTopOf="@id/authenticate"
        app:layout_constraintStart_toEndOf="@id/please" />


    <TextView
        android:id="@+id/you_will_be"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/you_will_be"
        android:textColor="@color/deep_orange"
        android:textSize="@dimen/fifteen_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/please" />

    <TextView
        android:id="@+id/redirected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/two_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/redirected"
        android:textColor="@color/deep_orange"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toEndOf="@id/you_will_be"
        app:layout_constraintTop_toBottomOf="@id/please" />

    <TextView
        android:id="@+id/kindly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/four_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/kindly"
        android:textColor="@color/deep_orange"
        android:textSize="@dimen/fifteen_sp"
        app:layout_constraintStart_toEndOf="@id/redirected"
        app:layout_constraintTop_toBottomOf="@id/please" />

    <TextView
        android:id="@+id/be"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/five_dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/be"
        android:textColor="@color/deep_orange"
        android:textSize="@dimen/fifteen_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/you_will_be" />

    <TextView
        android:id="@+id/patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/two_dp"
        android:layout_marginTop="@dimen/five_dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/patient"
        android:textColor="@color/deep_orange"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toEndOf="@id/be"
        app:layout_constraintTop_toBottomOf="@id/you_will_be" />

    <TextView
        android:id="@+id/until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/two_dp"
        android:layout_marginTop="@dimen/five_dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/until_the_process"
        android:textColor="@color/deep_orange"
        android:textSize="@dimen/fifteen_sp"
        app:layout_constraintStart_toEndOf="@id/patient"
        app:layout_constraintTop_toBottomOf="@id/you_will_be" />

    <TextView
        android:id="@+id/completes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/five_dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/completes"
        android:textColor="@color/deep_orange"
        android:textSize="@dimen/fifteen_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/be" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/authenticate"
        android:layout_width="@dimen/three_fifty_dp"
        android:layout_height="@dimen/fifty_five_dp"
        android:layout_marginStart="@dimen/thirty_dp"
        android:layout_marginEnd="@dimen/thirty_dp"
        android:layout_marginBottom="@dimen/thirty_dp"
        android:background="@drawable/ripple"
        android:elevation="@dimen/five_dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:paddingStart="@dimen/eight_dp"
        android:paddingTop="@dimen/ten_dp"
        android:paddingEnd="@dimen/eight_dp"
        android:paddingBottom="@dimen/ten_dp"
        android:text="@string/sign_in_sign_up"
        android:textColor="@color/fireflix_white"
        android:textSize="@dimen/fifteen_sp"
        app:cornerRadius="@dimen/fifty_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/authenticate_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/deep_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackColor="@color/fireflix_white" />


</androidx.constraintlayout.widget.ConstraintLayout>