<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".presentation.SplashFragment">


    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_marginBottom="90dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/hello"
        android:textColor="@color/deep_orange"
        android:textSize="@dimen/fourty_five_sp"
        app:layout_constraintBottom_toTopOf="@id/navigate_for_authentication"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/there"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="95dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/there"
        android:textColor="@color/deep_orange"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/navigate_for_authentication"
        app:layout_constraintStart_toEndOf="@id/hello"/>


    <TextView
        android:id="@+id/authenticate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/authenticate_to_continue"
        android:textColor="@color/deep_orange"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/hello"
        app:layout_constraintStart_toStartOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/navigate_for_authentication"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:elevation="5dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="8dp"
        android:textSize="15sp"
        android:text="@string/authenticate"
        android:paddingBottom="10dp"
        android:background="@drawable/ripple"
        app:cornerRadius="50dp"
        android:textColor="@color/fireflix_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>