<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    tools:context=".presentation.support.SupportFragment">

    <ImageButton
        android:id="@+id/navigate_support_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/support_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/show_your_support"
        android:textColor="@color/deep_orange"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigate_support_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age_ed"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_your_age"
        android:padding="16dp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidth="2dp"
        app:errorTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/support_txt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_ed_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_ed"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_your_weight"
        android:padding="16dp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidth="2dp"
        app:errorTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_ed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_ed_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/support_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/select_rating"
        android:textColor="@color/fireflix_black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/diet_spinner" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/ratings_spinner"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:popupBackground="@color/fireflix_gray_50_a600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/support_rating" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/diet_spinner"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:popupBackground="@color/fireflix_gray_50_a600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/support_diet" />

    <TextView
        android:id="@+id/support_diet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/select_diet"
        android:textColor="@color/fireflix_black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/weight_ed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_application_insight"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ripple"
        android:elevation="5dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="8dp"
        android:paddingBottom="10dp"
        android:text="@string/submit"
        android:textColor="@color/fireflix_white"
        android:textSize="15sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>