<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nutrition_history_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="15dp"
    android:elevation="20dp"
    android:background="@color/card"
    android:backgroundTint="@color/card"
    app:strokeColor="@color/fireflix_black"
    app:strokeWidth="0.5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <TextView
            android:id="@+id/nutrition_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/name_of_the_product"
            android:textColor="@color/fireflix_orange"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nutrition_history_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto_light"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:textColor="@color/fireflix_black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nutrition_history" />


        <TextView
            android:id="@+id/nutrition_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/description_of_the_product"
            android:textColor="@color/fireflix_orange"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nutrition_history_name" />

        <TextView
            android:id="@+id/nutrition_history_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto_light"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:textColor="@color/fireflix_black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nutrition_description" />

        <TextView
            android:id="@+id/nutrition_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/time"
            android:textColor="@color/fireflix_orange"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nutrition_history_description" />


        <TextView
            android:id="@+id/nutrition_history_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_light"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"

            android:textColor="@color/fireflix_black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nutrition_time" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>